WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191617
[iOS] A few drag and drop tests are crashing after
r238146
https://bugs.webkit.org/show_bug.cgi?id=191617
Summary
[iOS] A few drag and drop tests are crashing after r238146
Wenson Hsieh
Reported
2018-11-13 18:39:59 PST
From
https://build.webkit.org/builders/Apple%20iOS%2012%20Simulator%20Release%20WK2%20(Tests)/builds/934/steps/run-api-tests/logs/stdio
: Crashed TestWebKitAPI.DragAndDropTests.ContentEditableToContentEditable 2018-11-13 15:46:08.352 TestWebKitAPI[4478:97488278] *** Assertion failure in NSComparisonResult UIContentSizeCategoryCompareToCategory(__strong UIContentSizeCategory _Nonnull, __strong UIContentSizeCategory _Nonnull)(), /BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKitCore_Sim/UIKit-3698.84.15/UIContentSizeCategory.m:87 Child process terminated with signal 11: Segmentation fault TestWebKitAPI.DragAndDropTests.TextAreaToInput 2018-11-13 15:47:57.912 TestWebKitAPI[4829:97493287] *** Assertion failure in NSComparisonResult UIContentSizeCategoryCompareToCategory(__strong UIContentSizeCategory _Nonnull, __strong UIContentSizeCategory _Nonnull)(), /BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKitCore_Sim/UIKit-3698.84.15/UIContentSizeCategory.m:87 Child process terminated with signal 11: Segmentation fault TestWebKitAPI.DragAndDropTests.ContentEditableToTextarea 2018-11-13 15:46:09.879 TestWebKitAPI[4483:97488609] *** Assertion failure in NSComparisonResult UIContentSizeCategoryCompareToCategory(__strong UIContentSizeCategory _Nonnull, __strong UIContentSizeCategory _Nonnull)(), /BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKitCore_Sim/UIKit-3698.84.15/UIContentSizeCategory.m:87 Child process terminated with signal 11: Segmentation fault TestWebKitAPI.DragAndDropTests.SinglePlainTextWordTypeIdentifiers 2018-11-13 15:47:56.411 TestWebKitAPI[4824:97492947] *** Assertion failure in NSComparisonResult UIContentSizeCategoryCompareToCategory(__strong UIContentSizeCategory _Nonnull, __strong UIContentSizeCategory _Nonnull)(), /BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKitCore_Sim/UIKit-3698.84.15/UIContentSizeCategory.m:87 Child process terminated with signal 11: Segmentation fault TestWebKitAPI.DragAndDropTests.ContentEditableMoveParagraphs 2018-11-13 15:46:06.854 TestWebKitAPI[4473:97488174] *** Assertion failure in NSComparisonResult UIContentSizeCategoryCompareToCategory(__strong UIContentSizeCategory _Nonnull, __strong UIContentSizeCategory _Nonnull)(), /BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKitCore_Sim/UIKit-3698.84.15/UIContentSizeCategory.m:87 Child process terminated with signal 11: Segmentation fault TestWebKitAPI.DragAndDropTests.SinglePlainTextURLTypeIdentifiers 2018-11-13 15:47:54.893 TestWebKitAPI[4819:97492861] *** Assertion failure in NSComparisonResult UIContentSizeCategoryCompareToCategory(__strong UIContentSizeCategory _Nonnull, __strong UIContentSizeCategory _Nonnull)(), /BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKitCore_Sim/UIKit-3698.84.15/UIContentSizeCategory.m:87 Child process terminated with signal 11: Segmentation fault
Attachments
Patch
(23.79 KB, patch)
2018-11-13 21:31 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-11-13 21:31:39 PST
Created
attachment 354767
[details]
Patch
WebKit Commit Bot
Comment 2
2018-11-14 11:27:37 PST
Comment on
attachment 354767
[details]
Patch Clearing flags on attachment: 354767 Committed
r238188
: <
https://trac.webkit.org/changeset/238188
>
WebKit Commit Bot
Comment 3
2018-11-14 11:27:38 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-11-14 11:28:26 PST
<
rdar://problem/46069430
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug